add overlooked translation

--- a/src/main/resources/assets/mwc/lang/ko_KR.lang
+++ b/src/main/resources/assets/mwc/lang/ko_KR.lang
@@ -21,22 +21,22 @@ item.Spec_Ops_chest.name=전투복 상의 (검은색)
 item.Spec_Ops_boots.name=전투화 (검은색)
 
 item.Spetznaz_helmet.name=케블라 헬멧 (녹색)
-item.Spetznaz_chest.name=전투복 상의 (Forest)
-item.Spetznaz_boots.name=전투화 (Forest)
+item.Spetznaz_chest.name=전투복 상의 (숲 위장)
+item.Spetznaz_boots.name=전투화 (숲 위장)
 
-item.Urban_helmet.name=케블라 헬멧 (Urban)
-item.Urban_chest.name=전투복 상의 (Urban)
-item.Urban_boots.name=전투화 (Urban)
+item.Urban_helmet.name=케블라 헬멧 (도시 위장)
+item.Urban_chest.name=전투복 상의 (도시 위장)
+item.Urban_boots.name=전투화 (도시 위장)
 
 item.ghillie_helmet.name=위장복 후드
 item.ghillie_chest.name=위장복 상의
 item.ghillie_boots.name=위장복 부츠
 
-item.blackcamo_chest.name=Multi-Camo Black Shirt
-item.forest_chest.name=Military Forest Shirt
+item.blackcamo_chest.name=멀티캠 검정 셔츠
+item.forest_chest.name=국방색 셔츠
 
-item.blackjeans_boots.name=Black Jeans/Boots
-item.khakijeans_boots.name=Khaki Jeans/Black Boots
+item.blackjeans_boots.name=검은 청바지/신발
+item.khakijeans_boots.name=카키색 청바지/검정 신발
 
 item.Swat_helmet.name=SWAT 헬멧
 item.Swat_chest.name=SWAT 전투복
@@ -44,13 +44,13 @@ item.Swat_boots.name=SWAT 전투모
 
 item.Tactical_helmet.name=전술 야간투시경
 
-item.Nazisanta_helmet.name=Third Reich Santa Hat
-item.Nazisanta_chest.name=Third Reich Santa Coat
-item.Nazisanta_boots.name=Third Reich Santa Boots
+item.Nazisanta_helmet.name=3 제국 산타 모자
+item.Nazisanta_chest.name=3 제국 산타 코트
+item.Nazisanta_boots.name=3 제국 산타 신발
 
-item.Santa_helmet.name=Santa Beret
-item.Santa_chest.name=Santa Coat
-item.Santa_boots.name=Santa Boots
+item.Santa_helmet.name=산타 베레모
+item.Santa_chest.name=산타 코트
+item.Santa_boots.name=산타 신발
 
 item.Juggernaut_helmet.name=저거너트 헬멧
 item.Juggernaut_chest.name=저거너트 상의
@@ -69,15 +69,15 @@ item.Dclass_boots.name=D-계급 신발
 
 item.mwc_combat_sustainment_backpack_tan.name=전투 유지 배낭 (탄색)
 item.mwc_combat_sustainment_backpack_black.name=전투 유지 배낭 (검은색)
-item.mwc_combat_sustainment_backpack_forest.name=전투 유지 배낭 (Forest)
+item.mwc_combat_sustainment_backpack_forest.name=전투 유지 배낭 (숲 위장)
 
 item.mwc_assault_backpack_tan.name=돌격 배낭 (탄색)
 item.mwc_assault_backpack_black.name=돌격 배낭 (검은색)
-item.mwc_assault_backpack_forest.name=돌격 배낭 (Forest)
+item.mwc_assault_backpack_forest.name=돌격 배낭 (숲 위장)
 
 item.mwc_tru_spec_cordura_backpack_tan.name=Tru-Spec 코듀라 배낭 (탄색)
 item.mwc_tru_spec_cordura_backpack_black.name=Tru-Spec 코듀라 배낭 (검은색)
-item.mwc_tru_spec_cordura_backpack_forest.name=Tru-Spec 코듀라 배낭 (Forest)
+item.mwc_tru_spec_cordura_backpack_forest.name=Tru-Spec 코듀라 배낭 (숲 위장)
 
 item.mwc_f5_switchblade_backpack.name=F5 스위치블레이드 배낭
 
@@ -86,14 +86,14 @@ item.mwc_duffle_bag.name=더플백
 item.mwc_flyye_field_compact_plate_carrier.name=몰 플레이트캐리어
 item.mwc_molle_black.name=몰 플레이트 캐리어 (검은색)
 item.mwc_molle_green.name=몰 플레이트 캐리어 (녹색)
-item.mwc_molle_urban.name=몰 플레이트 캐리어 (Urban)
+item.mwc_molle_urban.name=몰 플레이트 캐리어 (도시 위장)
 
 item.mwc_fort_armor.name=6B43 6A 방탄복
 
 item.mwc_usMC_vest.name=포스 리콘 조끼
 item.mwc_usMC_vest_black.name=포스 리콘 조끼 (검은색)
 item.mwc_usMC_vest_green.name=포스 리콘 조끼 (녹색)
-item.mwc_usMC_vest_urban.name=포스 리콘 조끼 (Urban)
+item.mwc_usMC_vest_urban.name=포스 리콘 조끼 (도시 위장)
 
 item.mwc_juggernaut_body_armor.name=저거너트 방탄복
 
@@ -111,11 +111,11 @@ item.ak15.name=AK-15
 item.m38_dmr.name=HK 416
 item.m4a1.name=M4A1
 item.vss_vintorez.name=VSS 빈토레즈
-item.sr3_vikhr.name=SR-3 Vikhr
+item.sr3_vikhr.name=SR-3 비흐르
 item.kbp_9a91.name=KBP 9A-91 카빈
 item.colt_m45a1.name=콜트 M45A1
 item.m9a1.name=M9A1 베레타
-item.mp_443.name=MP-443 Grach
+item.mp_443.name=MP-443 그라치
 item.as50.name=AS50
 item.ak101.name=AK-101
 item.Springfield.name=M1903 스프링필드
@@ -146,9 +146,9 @@ item.pp91_kedr.name=PP-91 Kedr
 item.vp70.name=VP-70
 item.he_standard_combat_shotgun.name=HE-SCS
 item.cz805_bren.name=CZ-805 Bren
-item.albert_01r.name=Albert-01R
+item.albert_01r.name=알베르트-01R
 item.nv4.name=NV4
-item.volk.name=Volk
+item.volk.name=볼크
 item.type2.name=Type-2
 item.MP43E.name=MP-43E
 item.M1873.name=M1873
@@ -171,7 +171,7 @@ item.esa23.name=ESA-23
 item.m1014.name=M1014
 item.m16a4.name=M16A4
 item.acr.name=레밍턴 ACR
-item.ak103_bullpup.name=AK-103 Bullpup
+item.ak103_bullpup.name=AK-103 불펍
 item.sl8.name=HK SL8
 item.dl44.name=DL-44
 item.supernova.name=베넬리 슈퍼노바
@@ -199,7 +199,7 @@ item.m1911.name=콜트 M1911
 item.browning_hi_power.name=브라우닝 하이파워
 item.bren_mkii.name=브렌 MkII
 item.m1_garand.name=M1 개런드
-item.browning_auto_5.name=브라우닝 Auto-5
+item.browning_auto_5.name=브라우닝 오토-5
 item.p90.name=FN P90
 item.mp7.name=HK MP7
 item.sccy_cpx_2.name=CPX-2
@@ -222,19 +222,19 @@ item.m17.name=M17
 item.hk_p12.name=HK P12
 item.mp7a1.name=HK MP7A1
 item.sa80.name=SA80
-item.mp443_grach.name=MP443 Grach
+item.mp443_grach.name=MP443 그라치
 item.g36k.name=HK G36K
 item.m14_dmr.name=M14 DMR
 item.remington_700.name=레밍턴-700
 item.ak74.name=AK-74
 item.cz805_bren_s1.name=CZ-805 브렌 S1
-item.makarov_pm.name=Makarov PM
+item.makarov_pm.name=마카로프 PM
 item.mp7_black_ice.name=HK MP7 블랙 아이스
 item.origin12.name=오리진-12
 item.fnfal.name=FN FAL
 item.m16a1.name=M16A1
 item.k2c1.name=K2C1
-item.ar10_super_sass.name=AR-10 Super SASS
+item.ar10_super_sass.name=AR-10 슈퍼 SASS
 item.mac10.name=MAC-10
 item.ump45.name=HK UMP-45
 item.m200_intervention.name=M200 인터벤션
@@ -261,7 +261,7 @@ item.sig556.name=SIG-556
 item.fmg9.name=FMG-9
 item.svd_dragunov.name=SVD 드라구노프
 item.type20.name=Type-20
-item.fiveseven.name=FN Five-Seven
+item.fiveseven.name=FN 파이브-세븐
 item.zbroyar_z10.name=Zbroyar-Z10
 item.malyuk.name=말류크
 item.turret.name=자동 포탑
@@ -269,7 +269,7 @@ item.turretupgraded.name=자동 포탑 vers.2
 item.turretsilenced.name=자동 포탑 vers.SA
 
 
-item.mwc_FiveSevenMag.name=20발 5.7x28mm Five-Seven 탄창
+item.mwc_FiveSevenMag.name=20발 5.7x28mm 파이브 세븐 탄창
 item.mwc_KedrMag_2.name=20발 9x19mm 탄창 (Kedr)
 item.mwc_M4A1Mag_2.name=30발 5.56x45mm NATO STANAG 탄창
 item.mwc_AK101Mag_2.name=30발 5.56x45mm 탄창
@@ -314,7 +314,7 @@ item.mwc_Scar60Mag.name=60발 7.62x51mm NATO CQC 드럼 탄창
 item.mwc_VSSVintorezMag_2.name=10발 9x39mm 탄창
 item.mwc_ASValMag.name=20발 9x39mm 탄창
 item.mwc_STG44Mag_2.name=30발 7.92x33mm 탄창
-item.mwc_SV98Mag_2.name=10발 7.62x54mm Izhmash 탄창
+item.mwc_SV98Mag_2.name=10발 7.62x54mm 이즈마쉬 탄창
 item.mwc_UziMag_2.name=32발 9x19mm 탄창
 item.mwc_VP70mag_2.name=18발 9x19mm 탄창
 item.mwc_HoneyBadgerMag_2.name=30발 7.62x35mm AAC 탄창
@@ -333,12 +333,12 @@ item.mwc_DesertEagleMag.name=.50 AE 7발 탄창
 item.mwc_MP7Mag.name=40발 4.6x30mm 탄창
 item.mwc_MP7Mag20.name=20발 4.6x30mm 탄창
 item.mwc_P90Mag.name=50발 5.7x28mm 탄창
-item.mwc_P90TerminatorMag.name=65발 5.7x28mm Terminator 탄창
+item.mwc_P90TerminatorMag.name=65발 5.7x28mm 터미네이터 탄창
 item.mwc_G11Mag.name=50발 4.73x33mm 탄창
 item.mwc_JohnsonMAG.name=20발 .30-06 스프링필드 탄창
 item.mwc_NTW20Mag.name=3발 20x82mm 탄창
 item.mwc_M1A1Mag.name=30발 .45 ACP 탄창 (M1A1)
-item.mwc_StonerMag.name=100발 5.56x45mm Stoner 탄창
+item.mwc_StonerMag.name=100발 5.56x45mm 스토너 탄창
 item.mwc_AUG9mmMag.name=30발 9x19mm PARA 탄창
 item.mwc_VectorMag.name=25발 .45 ACP 벡터 탄창
 item.mwc_g43_gewehr_mag.name=10발 7.92x57mm 게베어 탄창
@@ -369,7 +369,7 @@ item.mwc_FamasF1Mag.name=30발 5.56x45mm NATO F1 탄창
 item.mwc_BeowulfMag.name=13발 .50 베오울프 탄창
 item.mwc_S710TricunMag.name=30발 10mm 탄창
 item.mwc_hk417_mag.name=20발 7.62x51mm 417 탄창
-item.mwc_Origin12Mag.name=5발 12 게이지 Origin 탄창
+item.mwc_Origin12Mag.name=5발 12 게이지 오리진 탄창
 item.mwc_Origin12DrumMag.name=20발 12 게이지 드럼 탄창
 item.mwc_sccycpx2mag.name=10발 9x19mm CPX-2 탄창
 item.mwc_sccycpx2magext.name=15발 9x19mm CPX-2 탄창
@@ -457,7 +457,7 @@ item.mwc_Silencer762x51.name=7.62x51mm NATO 소음기
 item.mwc_Silencer50BMG.name=.50 BMG 소음기
 item.mwc_Silencer762x39.name=7.62x39mm 소음기
 item.mwc_Silencer556x39.name=5.56x39mm 소음기
-item.mwc_Silencer300AACBlackout.name=.300 AAC Blackout 소음기
+item.mwc_Silencer300AACBlackout.name=.300 AAC 블랙아웃 소음기
 item.mwc_Silencer65x39.name=6.5mm 소음기
 item.mwc_Silencer9x39mm.name=9x39mm 소음기
 item.mwc_SilencerMP7.name=4.6x30mm 소음기
@@ -536,17 +536,17 @@ item.mwc_ACRSBRHandGuard.name=ACR SBR 총열덮개 (검은색)
 item.mwc_ACRSBRHandGuardTan.name=ACR SBR 총열덮개
 item.mwc_ACRPolymerHandguard.name=ACR 폴리머 총열덮개 (검은색)
 item.mwc_ACRPolymerHandguardTan.name=ACR 폴리머 총열덮개
-item.mwc_ACRSquareDropHandguard.name=ACR Square Drop 총열덮개 (검은색)
-item.mwc_ACRSquareDropHandguardTan.name=ACR Square Drop 총열덮개
+item.mwc_ACRSquareDropHandguard.name=ACR 스퀘어 드롭 총열덮개 (검은색)
+item.mwc_ACRSquareDropHandguardTan.name=ACR 스퀘어 드롭 총열덮개
 item.mwc_HoneyBadgerHandguard.name=AAC 허니뱃저 총열덮개
-item.mwc_HoneyBadgerMatrixArmsHandguard.name=AAC 허니뱃저 Matrix Arms 총열덮개
+item.mwc_HoneyBadgerMatrixArmsHandguard.name=AAC 허니뱃저 매트릭스 암즈 총열덮개
 item.mwc_M1CarbineHandguard.name=M1 카빈 총열덮개
 item.mwc_M1CarbineVentilatedHandguard.name=M1 카빈 개방형 총열덮개
 item.mwc_M1ScoutCarbineHandguard.name=M1 Scout 카빈 총열덮개
 item.mwc_M16A4HandGuard.name=M16A4 4중 레일 총열덮개
 item.mwc_FNFALHandguard.name=FN FAL 총열덮개
 item.mwc_FNFALPARAHandguard.name=FN FAL PARA 총열덮개
-item.mwc_ScarMidWestIndustriesHandGuard.name=MidWest Industries SCAR 총열덮개
+item.mwc_ScarMidWestIndustriesHandGuard.name=미드웨스트 인더스트리즈 SCAR 총열덮개
 item.mwc_ScarMLOKHandguard.name=MLOK SCAR 총열덮개
 item.mwc_VectorMk1ModularHandguard.name=벡터 Mk1 모듈형 총열덮개
 item.mwc_VectorCarbineHandguard.name=벡터 카빈 총열덮개
@@ -554,7 +554,7 @@ item.mwc_Mk48HandGuard.name=Mk48 총열덮개
 item.mwc_M249UpperHandGuard.name=M249 상부 총열덮개
 item.mwc_Mk48UpperHandGuard.name=Mk48 상부 총열덮개
 item.mwc_G3A1Handguard.name=G3 총열덮개
-item.mwc_G3HandguardRailed.name=G3 레일ed 총열덮개
+item.mwc_G3HandguardRailed.name=G3 레일이 달린 총열덮개
 item.mwc_DSR1Handguard.name=DSR-1 총열덮개
 item.mwc_DSR1HandguardRailed.name=DSR-1 레일이 달린 총열덮개
 item.mwc_MP5BMHandGuard.name=MP5BM 총열덮개
@@ -570,7 +570,7 @@ item.mwc_Block2SOCOMHandguard.name=Block 2 SOCOM 총열덮개
 item.mwc_FSSTacLiteHandguard.name=FSS TacLite 총열덮개
 item.mwc_M16A1Handguard.name=M16A1 총열덮개
 item.mwc_M110Handguard.name=M110 총열덮개
-item.mwc_AR10SuperSASSHandguard.name=AR10 Super SASS 총열덮개
+item.mwc_AR10SuperSASSHandguard.name=AR10 슈퍼 SASS 총열덮개
 item.mwc_S710Handguard.name=S7-10 총열덮개
 item.mwc_SIGMCXHandguard.name=SIG MCX 총열덮개
 item.mwc_SIGMCXHandguardShort.name=Long SIG MCX 총열덮개
@@ -578,8 +578,8 @@ item.mwc_K2C1Handguard.name=K2C1 총열덮개
 item.mwc_AK12Handguard.name=AK-12 프로토타입 총열덮개
 item.mwc_AK12BHandguard.name=AK-12B 총열덮개
 item.mwc_KBP9A91Handguard.name=KBP 9A-91 총열덮개
-item.mwc_KBP9A91CompactHandguard.name=KBP 9A-91 Compact 총열덮개
-item.mwc_KBP9A91KulaTacHandguard.name=KBP 9A-91 KulaTac 총열덮개
+item.mwc_KBP9A91CompactHandguard.name=KBP 9A-91 컴팩트 총열덮개
+item.mwc_KBP9A91KulaTacHandguard.name=KBP 9A-91 쿨라택 총열덮개
 item.mwc_VSSVintorezHandguard.name=VSS 빈토레즈 총열덮개
 item.mwc_ASValHandguard.name=AS VAL 총열덮개
 
@@ -602,7 +602,7 @@ item.mwc_K2C1RearSight.name=K2C1 기계식 조준기
 item.mwc_ScorpionRearSight.name=스콜피온 가늠자
 item.mwc_ScorpionFrontSight.name=스콜피온 가늠쇠
 item.mwc_MP7IronSights.name=MP7 기계식 조준기
-item.mwc_MP7IronSightsStanding.name=MP7 Standing 기계식 조준기
+item.mwc_MP7IronSightsStanding.name=MP7 기립식 기계식 조준기
 item.mwc_AK12Iron.name=AK-12 가늠쇠
 
 item.mwc_Acog.name=트리지콘 ACOG
