PKM in progress

--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -255,7 +255,7 @@ item.famas_f1.name=Famas F1
 item.m1_carbine.name=M1 Carbine
 item.g3.name=G3
 item.dsr1.name=DSR1
-item.sig_xm7.name=SIG-XM7
+item.sig_xm7.name=SIG XM7
 item.ssg_08.name=SSG-08
 item.sig556.name=SIG-556
 item.fmg9.name=FMG-9
