--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -117,6 +117,7 @@ item.colt_m45a1.name=Colt M45A1
 item.m9a1.name=M9A1 Beretta
 item.mp_443.name=MP-443 Grach
 item.as50.name=AS50
+item.ax50.name=AI AX50
 item.ak101.name=AK-101
 item.Springfield.name=M1903 Springfield
 item.mg42.name=MG-42
@@ -194,6 +195,7 @@ item.m32_mgl.name=M32 MGL
 item.spas_12.name=Spas-12
 item.m60e4.name=M60E4
 item.m249.name=M249
+item.pkm.name=PKM
 item.mg34.name=MG-34
 item.m1911.name=Colt M1911
 item.browning_hi_power.name=Browning Hi-Power
@@ -264,6 +266,7 @@ item.type20.name=Type-20
 item.fiveseven.name=FN Five-Seven
 item.zbroyar_z10.name=Zbroyar-Z10
 item.malyuk.name=Malyuk
+item.pgm_hecate_ii.name=PGM Hecate II
 item.turret.name=Automated Turret
 item.turretupgraded.name=Automated Turret vers.2
 item.turretsilenced.name=Automated Turret vers.SA
@@ -284,7 +287,10 @@ item.mwc_M9Mag_2.name=15rnd 9x19mm Magazine
 item.mwc_M9Mag30.name=30rnd 9x19mm Magazine
 item.mwc_M9DrumMag.name=65rnd 9x19mm Drum Magazine
 item.mwc_APSMag_2.name=20rnd 9x19mm Magazine (APS)
+item.mwc_M1911Mag.name=7rnd .45 ACP Magazine
+item.mwc_M1911Mag_2.name=15rnd .45 ACP Magazine
 item.mwc_AS50Mag_2.name=10rnd .50 BMG Magazine (AS50)
+item.mwc_AX50Mag.name=5rnd .50 BMG Magazine (AX50)
 item.mwc_FrommerStopMag.name=8rnd .380 ACP Magazine
 item.mwc_G36CMag_2.name=30rnd 5.56x45mm NATO HK Magazine
 item.mwc_Glock18Cmag_2.name=20rnd 9x19mm Magazine
@@ -296,8 +302,6 @@ item.mwc_M110Mag_2.name=10rnd 7.62x51mm NATO Magazine
 item.mwc_M1928Mag.name=50rnd .45 ACP Magazine (M1928)
 item.mwc_M38Mag_2.name=30rnd 5.56x45mm NATO PMAG Magazine
 item.mwc_M40A6Mag_2.name=7rnd .308 Winchester Magazine
-item.mwc_M45A1Mag_2.name=7rnd .45 ACP Magazine
-item.mwc_M45A1Mag14.name=14rnd .45 ACP Magazine
 item.mwc_M712mag_2.name=20rnd 7.63x25mm Mauser Magazine
 item.mwc_M82Mag_2.name=10rnd .50 BMG NATO Magazine
 item.mwc_MG42Mag_2.name=50rnd 7.92x57mm MG Magazine
@@ -307,7 +311,8 @@ item.mwc_MP40Mag_2.name=32rnd 9x19mm MP Magazine
 item.mwc_MP443Mag_2.name=18rnd 9x19mm 443 Magazine
 item.mwc_MP5A5Mag.name=30rnd 9x19mm HK Magazine
 item.mwc_HK50Drum.name=50rnd 9x19mm HK Drum Magazine
-item.mwc_SaigaMag_2.name=5rnd 12G Magazine
+item.mwc_SaigaMag_2.name=5rnd 12 Gauge Magazine
+item.mwc_SaigaMag_3.name=12rnd 12 Gauge Magazine
 item.mwc_ScarHMag_2.name=20rnd 7.62x51mm NATO CQC Magazine
 item.mwc_Scar40Mag.name=40rnd 7.62x51mm NATO CQC Magazine
 item.mwc_Scar60Mag.name=60rnd 7.62x51mm NATO CQC Drum Magazine
@@ -316,6 +321,8 @@ item.mwc_ASValMag.name=20rnd 9x39mm Magazine
 item.mwc_STG44Mag_2.name=30rnd 7.92x33mm Magazine
 item.mwc_SV98Mag_2.name=10rnd 7.62x54mm Izhmash Magazine
 item.mwc_UziMag_2.name=32rnd 9x19mm Magazine
+item.mwc_UziMag_3.name=45rnd 9x19mm Magazine
+item.mwc_UziMag_4.name=60rnd 9x19mm Drum Magazine
 item.mwc_VP70mag_2.name=18rnd 9x19mm Magazine
 item.mwc_HoneyBadgerMag_2.name=30rnd 7.62x35mm AAC Magazine
 item.mwc_Stanag50.name=50rnd 5.56x45mm NATO STANAG Drum Magazine
@@ -324,6 +331,7 @@ item.mwc_Stanag100.name=100rnd 5.56x45mm NATO STANAG Drum Magazine
 item.mwc_M134Mag.name=1000rnd 7.62x51mm Magazine
 item.mwc_M60Mag.name=100rnd 7.62x51mm Magazine
 item.mwc_M249Mag.name=100rnd 5.56x45mm NATO Magazine
+item.mwc_PKMMag.name=120rnd 7.62x54mm Magazine
 item.mwc_FuelCell.name=(Chainsaw) Fuel Capsule
 item.mwc_BrenMag.name=30rnd 7.62x51mm Bren Magazine
 item.mwc_HiPowerMag.name=13rnd 9x19mm Magazine
@@ -343,7 +351,6 @@ item.mwc_AUG9mmMag.name=30rnd 9x19mm PARA Magazine
 item.mwc_VectorMag.name=25rnd .45 ACP Vector Magazine
 item.mwc_g43_gewehr_mag.name=10rnd 7.92x57mm Gewehr Magazine
 item.mwc_DP28Mag.name=47rnd 7.62x54mm Magazine
-item.mwc_M1911_44Mag.name=7rnd .44 1911 Magazine
 item.mwc_SamuraiEdgeMag.name=15rnd .40 S&W Samurai Edge Magazine
 item.mwc_socom_mag.name=30rnd 5.56x45mm NATO SOCOM STANAG Magazine
 item.mwc_M17Mag.name=17rnd 9x19mm SAUER Magazine
@@ -359,6 +366,7 @@ item.mwc_MAC10Mag.name=30rnd .45 ACP Magazine
 item.mwc_UMP45Mag.name=25rnd .45 ACP HK Magazine
 item.mwc_UMP9Mag.name=30rnd 9x19mm HK UMP Magazine
 item.mwc_InterventionMag.name=7rnd .408 CT Magazine
+item.mwc_InterventionMagExtend.name=10rnd .408 CT Magazine
 item.mwc_ScorpionMag.name=30rnd 9x19mm EVO Magazine
 item.mwc_MPXMag.name=30rnd 9x19mm MPX Magazine
 item.mwc_APC9Mag.name=30rnd 9x19mm APC9 Magazine
@@ -526,6 +534,7 @@ item.mwc_AR57Handguard.name=AR-57 Handguard
 item.mwc_RPK16handguard.name=RPK-16 Handguard
 item.mwc_EF88Handguard.name=EF-88 Handguard
 item.mwc_Origin12Handguard.name=Origin-12 Handguard
+item.mwc_Saiga12Handguard.name=Saiga 12 Handguard
 item.mwc_HKS20Handguard.name=Origin-12 [HKS-20] Handguard
 item.mwc_ACRHandGuardBlack.name=ACR Handguard (Black)
 item.mwc_ACRWEMSKHandguard.name=ACR WE MSK Handguard (Black)
@@ -582,6 +591,12 @@ item.mwc_KBP9A91CompactHandguard.name=KBP 9A-91 Compact Handguard
 item.mwc_KBP9A91KulaTacHandguard.name=KBP 9A-91 KulaTac Handguard
 item.mwc_VSSVintorezHandguard.name=VSS Vintorez Handguard
 item.mwc_ASValHandguard.name=AS VAL Handguard
+item.mwc_UziMLOKHandguard.name=Uzi MLOK Handguard
+item.mwc_B50PKMHandguard.name=B-50 PKM Handguard
+item.mwc_B50PKPHandguard.name=B-50 PKP Handguard
+item.mwc_InterventionHandguard.name=Intervention Handguard
+item.mwc_InterventionQTDRifleHandguard.name=Intervention QTD-Rifle Handguard
+item.mwc_InterventionRailSystemHandguard.name=Intervention Rail System Handguard
 
 
 item.mwc_AKMIron.name=Standard Iron Sight
@@ -617,6 +632,7 @@ item.mwc_okp7.name=OKP-7 Sight
 item.mwc_MicroT1.name=Micro-T1 Sight
 item.mwc_m2a1_sight.name=M2A1 Sight
 item.mwc_RMRsight.name=RMR Sight
+item.mwc_LeupoldDeltapointPro.name=Leupold DeltaPoint Pro
 item.mwc_BijiaReflex.name=Bijia Reflex Sight
 item.mwc_AimpointCompM5.name=Aimpoint Comp M5 Sight
 item.mwc_AimpointCompM2.name=Aimpoint Comp M2 Sight
@@ -639,6 +655,7 @@ item.mwc_F2000Scope.name=FNPM 1.6x
 item.mwc_NightRaiderScope.name=Night Raider Scope
 item.mwc_AUGscope.name=AUG Scope
 item.mwc_LeupoldRailScope.name=Leupold VX-6 CDS TMOA Rifle Scope (w/ Rail)
+item.mwc_S&BPMII5-25x56P4FLScope=S&B 5-25x56 PM II
 
 item.mwc_Laser.name=UTG Tactical Laser
 item.mwc_Laser2.name=LD19206-IR Tactical Laser
@@ -677,6 +694,7 @@ item.mwc_Remington870MilSpecStock.name=R870 Mil-Spec Stock
 item.mwc_Remington870HK416StockStock.name=R870 HK-416 Stock
 item.mwc_Remington870SawedGrip.name=R870 Sawed Grip (Sawed Stock)
 item.mwc_Origin12Stock.name=Origin-12 Stock
+item.mwc_Saiga12Stock.name=Saiga 12 Stock
 item.mwc_HKS20Stock.name=Origin-12 [HKS-20] Stock
 item.mwc_VectorStock.name=Kriss Vector Stock
 item.mwc_ACRStockBlack.name=ACR Stock (Black)
@@ -700,10 +718,15 @@ item.mwc_MAC21Stock.name=MAC-21 Stock
 item.mwc_M249ParaStock.name=M249 Para Stock
 item.mwc_M249MilspecStock.name=M249 Mil-Spec Stock
 item.mwc_M249Hk416Stock.name=M249 HK416 Stock
+item.mwc_PKMStock.name=PKM Stock
+item.mwc_PT2Stock.name=PT-2 Stock
 item.mwc_APSStock.name=APS Stock
 item.mwc_MP5Stock.name=MP5 Stock
 item.mwc_MP5StockAdapter.name=MP5 Stock Adapter
 item.mwc_G3Stock.name=G3 Stock
+item.mwc_G36CStock.name=G36C Stock
+item.mwc_G36CMGStock.name=G36CMG Stock
+item.mwc_G36KVStock.name=G36KV Stock
 item.mwc_MP7Stock.name=MP7 Stock
 item.mwc_MP7MilSpecStock.name=MP7 Mil-Spec Stock
 item.mwc_AK12Stock.name=AK-12 Prototype Stock
@@ -717,13 +740,24 @@ item.mwc_M110Stock.name=M110 Stock
 item.mwc_ARPRSPrecisionStock.name=AR PRS Precision Stock
 item.mwc_KS23Stock.name=KS23 Stock
 item.mwc_KS23MStock.name=KS23M Stock
+item.mwc_UziWoodStock.name=Uzi Wood Stock
+item.mwc_UziFoldingStockOpened.name=Uzi Folding Stock Open
+item.mwc_UziFoldingStockClosed.name=Uzi Folding Stock Closed
+item.mwc_InterventionStock.name=Intervention Stock
+item.mwc_InterventionFJXLUX7Stock.name=Intervention FJX-LUX Stock
+item.mwc_InterventionKiloTaCStock.name=Intervention Kilo TaC Stock
 
 
 item.mwc_AngledGrip.name=Angled Grip
+item.mwc_AngledGripTan.name=Angled Grip (Tan)
 item.mwc_Grip2.name=Grip
+item.mwc_Grip2Tan.name=Grip (Tan)
 item.mwc_JunoGrip.name=Juno Grip
+item.mwc_JunoGripTan.name=Juno Grip (Tan)
 item.mwc_VGrip.name=Foregrip
+item.mwc_VGripTan.name=Foregrip (Tan)
 item.mwc_StubbyGrip.name=Stubby Grip
+item.mwc_StubbyGrip.name=Stubby Grip (Tan)
 item.mwc_MP5HOGUEGrip.name=MP5 Hogue Grip
 item.mwc_GlockHogueGrip.name=Glock Hogue Grip
 item.mwc_GlockHogueGripTan.name=Glock Hogue Grip (Tan)
@@ -757,6 +791,9 @@ item.mwc_AK12Grip.name=AK-12 Prototype Grip
 item.mwc_AK12ErgoGrip.name=AK-12 Ergo Grip
 item.mwc_AKErgoGripTan.name=AK Ergo Grip (Tan)
 item.mwc_KS23RaptorGrip.name=KS-23 Grip
+item.mwc_Saiga12Grip.name=Saiga 12 Grip
+item.mwc_PKMGrip.name=PKM Grip
+item.mwc_RK3PGrip.name=RK-3P Grip
 
 
 item.mwc_MA5Dcover.name=MA5D ICWS Dust Cover
@@ -786,10 +823,13 @@ item.mwc_KrissVectorSwordfish.name=Kriss Vector Swordfish Kit
 item.mwc_Bipod.name=Bipod
 item.mwc_RailRiser.name=Rail Riser
 item.mwc_FMGcarryhandle.name=FMG-9 Carry Handle
+item.mwc_InterventionCarryHandle.name=Intervention Carry Handle
+item.mwc_InterventionKeystoneHandle.name=Intervention Keys Tone Carry Handle
 item.mwc_AR15Iron.name=AR Carry Handle
 item.mwc_FABDefenseMount.name=FAB Defense Mount
 item.mwc_MIMP5TRRail.name=MI MP5 TR Rail
 item.mwc_MIMP5MRail.name=MI MP5 M Rail
+item.mwc_UziSightRail.name= Uzi Sight Rail
 item.mwc_ShotgunRail.name=Shotgun Rail
 item.mwc_Kar98KRail.name=Kar98K Rail
 item.mwc_M60Rail.name=M60 Rail
@@ -801,6 +841,8 @@ item.mwc_Kar98Krail.name=Kar98K Rail
 item.mwc_M32Barrel.name=M32 Extended Barrel
 item.mwc_AR57Receiver.name=AR-57 Receiver
 item.mwc_RPKbarrel.name=RPK Barrel
+item.mwc_PKMBarrel.name=PKM Barrel
+item.mwc_PechenegBarrel.name=Pecheneg Barrel
 item.mwc_Remington870Pump.name=R870 Wood Pump
 item.mwc_Remington870MagpulPump.name=R870 Magpul Pump
 item.mwc_Remington870PoliceMagnumPump.name=R870 Police Magnum Pump
@@ -814,8 +856,10 @@ item.mwc_HoneyBadgerKnightsReceiver.name=AAC Honey Badger Knights Receiver
 item.mwc_HoneyBadgerKnightsReceiverBlack.name=AAC Honey Badger Knights Receiver (Black)
 item.mwc_M1911Slide.name=M1911 Slide
 item.mwc_M1911Body.name=M1911 Body
-item.mwc_M191144MagSlide.name=M1911 .44 Magnum Slide
-item.mwc_M191144MagBody.name=M1911 .44 Magnum Body
+item.mwc_M45A1CQBPBody.name=M45A1 CQB Body
+item.mwc_M45A1CQBPSlide.name=M45A1 CQB Slide
+item.mwc_HardballerSlide.name=Hardballer Slide
+item.mwc_HardballerBody.name=Hardballer Body
 item.mwc_M9A1Slide.name=M9A1 Slide
 item.mwc_M9A1Body.name=M9A1 Body
 item.mwc_SamuraiEdgeSlide.name=M9A1 Samurai Edge Slide
