Separate electronics & Add missing straight forklift

--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -967,7 +967,9 @@ tile.mwc_wooden_crate_opened.name=Wooden Crate Opened
 tile.mwc_operating_table.name=Operating Table
 tile.mwc_operating_table_alt.name=Operating Table (ALT)
 tile.mwc_forklift.name=Forklift
+tile.mwc_forklift_rotated.name=Forklift (Rotated)
 tile.mwc_forklift_alt.name=Forklift (ALT)
+tile.mwc_forklift_alt_rotated.name=Forklift (ALT) (Rotated)
 tile.mwc_trusses.name=Trusses
 tile.mwc_ceiling_lamp.name=Ceiling Lamp
 tile.mwc_ceiling_lamp_alt.name=Ceiling Lamp (ALT)
