Added missing non-rotated versions of the duel floodlight & Fixed model name & Fixed name

--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1002,7 +1002,8 @@ tile.mwc_ServerRackRight.name=Server Rack Right
 tile.mwc_ServerRackRightAlt.name=Server Rack Right (ALT)
 tile.mwc_ServerRackTopLeft.name=Server Rack Top Left
 tile.mwc_ServerRackTopRight.name=Server Rack Top Right
-tile.mwc_DuelFloodLight.name=Duel Flood Light
+tile.mwc_duelfloodlight.name=Duel Flood Light
+tile.mwc_duelfloodlight_rotated.name=Duel Flood Light (Rotated)
 tile.mwc_FloodLight.name=Flood Light
 tile.mwc_Radio_rotated.name=Radio (Rotated)
 tile.mwc_Radio.name=Radio
