--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1004,7 +1004,8 @@ tile.mwc_ServerRackTopLeft.name=Server Rack Top Left
 tile.mwc_ServerRackTopRight.name=Server Rack Top Right
 tile.mwc_duelfloodlight.name=Duel Flood Light
 tile.mwc_duelfloodlight_rotated.name=Duel Flood Light (Rotated)
-tile.mwc_FloodLight.name=Flood Light
+tile.mwc_floodlight.name=Flood Light
+tile.mwc_floodlight_rotated.name=Flood Light ((Rotated))
 tile.mwc_Radio_rotated.name=Radio (Rotated)
 tile.mwc_Radio.name=Radio
 tile.mwc_camera_rotated.name=Camera (Rotated)
