--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -944,17 +944,17 @@ tile.mwc_ceiling_tv_rotated.name=Ceiling TV (Rotated)
 tile.mwc_office_chair.name=Office Chair Prop
 tile.mwc_office_chair_2.name=Office Chair 2 Prop
 tile.mwc_desk_corner.name=Desk Corner Prop
-tile.mwc_desk_corner_alt1.name=Desk Corner (ALT1)
+tile.mwc_desk_corner_alt1.name=Desk Corner (ALT 1)
 tile.mwc_desk_left.name=Desk Left
-tile.mwc_desk_left_alt1.name=Desk Left (ALT1)
+tile.mwc_desk_left_alt1.name=Desk Left (ALT 1)
 tile.mwc_desk_middle.name=Desk Middle
-tile.mwc_desk_middle_alt1.name=Desk Middle (ALT1)
+tile.mwc_desk_middle_alt1.name=Desk Middle (ALT 1)
 tile.mwc_desk_right.name=Desk Right
-tile.mwc_desk_right_alt1.name=Desk Right (ALT1)
+tile.mwc_desk_right_alt1.name=Desk Right (ALT 1)
 tile.mwc_desk_shelf.name=Desk Shelf
-tile.mwc_desk_shelf_alt1.name=Desk Shelf (A1)
-tile.mwc_desk_shelf_alt2.name=Desk Shelf (A2)
-tile.mwc_desk_shelf_alt3.name=Desk Shelf (A3)
+tile.mwc_desk_shelf_alt1.name=Desk Shelf (ALT 1)
+tile.mwc_desk_shelf_alt2.name=Desk Shelf (ALT 2)
+tile.mwc_desk_shelf_alt3.name=Desk Shelf (ALT 3)
 tile.mwc_barrier.name=Barrier
 tile.mwc_barrier_rotated.name=Barrier (Rotated)
 tile.mwc_body_bag.name=Body Bag
@@ -965,19 +965,19 @@ tile.mwc_dumpster.name=Dumpster
 tile.mwc_wooden_crate.name=Wooden Crate
 tile.mwc_wooden_crate_opened.name=Wooden Crate Opened
 tile.mwc_operating_table.name=Operating Table
-tile.mwc_operating_table_alt.name=Operating Table (ALT)
+tile.mwc_operating_table_alt.name=Operating Table (ALT 1)
 tile.mwc_forklift.name=Forklift
 tile.mwc_forklift_rotated.name=Forklift (Rotated)
-tile.mwc_forklift_alt.name=Forklift (ALT)
-tile.mwc_forklift_alt_rotated.name=Forklift (ALT) (Rotated)
+tile.mwc_forklift_alt.name=Forklift (ALT 1)
+tile.mwc_forklift_alt_rotated.name=Forklift (ALT 1) (Rotated)
 tile.mwc_trusses.name=Trusses
 tile.mwc_ceiling_lamp.name=Ceiling Lamp
-tile.mwc_ceiling_lamp_alt.name=Ceiling Lamp (ALT)
+tile.mwc_ceiling_lamp_alt.name=Ceiling Lamp (ALT 1)
 tile.mwc_vent.name=Vent
 tile.mwc_vent_rotated.name=Vent (Rotated)
 tile.mwc_vent_corner.name=Vent Corner
 tile.mwc_vent_corner_rotated.name=Vent Corner (Rotated)
-tile.mwc_vent_corner_rotated_alt.name=Vent Corner (Rotated ALT)
+tile.mwc_vent_corner_rotated_alt.name=Vent Corner (ALT 1) (Rotated)
 tile.mwc_vent_intersection.name=Vent Intersection
 tile.mwc_vent_end.name=Vent End
 tile.mwc_white_desk_left.name=White Desk Left
@@ -994,18 +994,18 @@ tile.mwc_outdoor_chair_rotated.name=Outdoor Chair (Rotated)
 tile.mwc_vending_machine.name=Vending Machine
 tile.mwc_ServerRackLeft.name=Server Rack Left
 tile.mwc_ServerRackEmptyLeft.name=Server Rack Empty Left
-tile.mwc_ServerRackLeftAlt.name=Server Rack Left (ALT)
-tile.mwc_ServerRackLeftAlt2.name=Server Rack Left (ALT2)
-tile.mwc_ServerRackLeftAlt3.name=Server Rack Left (ALT3)
+tile.mwc_ServerRackLeftAlt.name=Server Rack Left (ALT 1)
+tile.mwc_ServerRackLeftAlt2.name=Server Rack Left (ALT 2)
+tile.mwc_ServerRackLeftAlt3.name=Server Rack Left (ALT 3)
 tile.mwc_ServerRackEmptyRight.name=Server Rack Empty Right
 tile.mwc_ServerRackRight.name=Server Rack Right
-tile.mwc_ServerRackRightAlt.name=Server Rack Right (ALT)
+tile.mwc_ServerRackRightAlt.name=Server Rack Right (ALT 1)
 tile.mwc_ServerRackTopLeft.name=Server Rack Top Left
 tile.mwc_ServerRackTopRight.name=Server Rack Top Right
 tile.mwc_duelfloodlight.name=Duel Flood Light
 tile.mwc_duelfloodlight_rotated.name=Duel Flood Light (Rotated)
 tile.mwc_floodlight.name=Flood Light
-tile.mwc_floodlight_rotated.name=Flood Light ((Rotated))
+tile.mwc_floodlight_rotated.name=Flood Light (Rotated)
 tile.mwc_Radio_rotated.name=Radio (Rotated)
 tile.mwc_Radio.name=Radio
 tile.mwc_camera_rotated.name=Camera (Rotated)
@@ -1014,15 +1014,15 @@ tile.mwc_propanetank.name=Propane Tank
 tile.mwc_towablefloodlight.name=Towable Flood Light
 tile.mwc_sandbag.name=Sand Bag
 tile.mwc_sandbagwall.name=Sand Bag Wall
-tile.mwc_crossgravestone.name=Gravestone Cross 1
-tile.mwc_crossgravestone2.name=Gravestone Cross 2
-tile.mwc_crossgravestone3.name=Gravestone Cross 3
+tile.mwc_crossgravestone.name=Gravestone Cross
+tile.mwc_crossgravestone2.name=Gravestone Cross (ALT 1)
+tile.mwc_crossgravestone3.name=Gravestone Cross (ALT 2)
 tile.mwc_gravestoneskull.name=Gravestone Skull
 tile.mwc_gravestone.name=Gravestone
 tile.mwc_scarecrow.name=Scarecrow
-tile.mwc_spookyghost.name=Spooky Ghost 1
-tile.mwc_spookyghost2.name=Spooky Ghost 2
-tile.mwc_spookyghost3.name=Spooky Ghost 3
+tile.mwc_spookyghost.name=Spooky Ghost
+tile.mwc_spookyghost2.name=Spooky Ghost (ALT 1)
+tile.mwc_spookyghost3.name=Spooky Ghost (ALT 2)
 tile.mwc_swat_truck.name=SWAT Truck
 
 itemGroup.weapons=Weapons
