--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -921,8 +921,8 @@ tile.mwc_weapons_case_small.name=Small Weapons Case
 tile.mwc_russian_weapons_case.name=Russian Weapons Case
 tile.mwc_ammo_box.name=Ammo Box
 tile.mwc_weapons_locker.name=Weapons Locker
-tile.mwc_fridge_open.name=Fridge Open Prop
-tile.mwc_fridge_closed.name=Fridge Closed Prop
+tile.mwc_fridge_open.name=Fridge (Open)
+tile.mwc_fridge_closed.name=Fridge (Closed)
 tile.mwc_artillery_PROP.name=Artillery Prop
 tile.mwc_supply_drop.name=Supply Drop
 tile.mwc_medical_crate.name=Medical Crate
