--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -923,7 +923,7 @@ tile.mwc_ammo_box.name=Ammo Box
 tile.mwc_weapons_locker.name=Weapons Locker
 tile.mwc_fridge_open.name=Fridge (Open)
 tile.mwc_fridge_closed.name=Fridge (Closed)
-tile.mwc_artillery_PROP.name=Artillery Prop
+tile.mwc_artillery_prop.name=Artillery Prop
 tile.mwc_supply_drop.name=Supply Drop
 tile.mwc_medical_crate.name=Medical Crate
 tile.mwc_locker.name=Locker
