Aiming position, flame position, and cleaning
1/10

--- a/src/main/resources/assets/mwc/lang/tr_TR.lang
+++ b/src/main/resources/assets/mwc/lang/tr_TR.lang
@@ -246,7 +246,7 @@ item.g2_contender.name=G2 Contender
 item.beowulf_50_cal.name=Beowulf .50 Kalibre
 item.hk_417.name=HK 417
 item.ar15.name=AR-15
-item.sig_MCx.name=SIG MCX
+item.sig_mcx.name=SIG MCX
 item.mas_21.name=MAS-21
 item.mp443.name=MP443
 item.ump_45.name=UMP45
