--- a/src/main/resources/assets/mwc/lang/zh_CN.lang
+++ b/src/main/resources/assets/mwc/lang/zh_CN.lang
@@ -253,7 +253,7 @@ item.g2_contender.name=G2竞争者 手枪
 item.beowulf_50_cal.name=贝奥武夫 射手步枪
 item.hk_417.name=HK417 射手步枪
 item.ar15.name=AR-15 突击步枪
-item.sig_MCx.name=SIG MCX 突击步枪
+item.sig_mcx.name=SIG MCX 突击步枪
 item.mas_21.name=MAS-21 手枪
 item.mp443.name=MP443 手枪
 item.ump_45.name=UMP45 冲锋枪
