--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -190,7 +190,7 @@ item.m79.name=M79 GL
 item.bfg_9000.name=BFG 9000
 item.chiappa_triple_crown.name=Chiappa Triple Crown
 item.quad_barrel_shotgun.name=Quad-Barrel Shotgun
-item.m134.name=M134
+item.m134.name=M134 Minigun
 item.m32_mgl.name=M32 MGL
 item.spas_12.name=Spas-12
 item.m60e4.name=M60E4
@@ -214,7 +214,6 @@ item.stonera1.name=Stoner A1
 item.m1941_johnson.name=M1941 Johnson (LMG)
 item.m1941_johnson_rifle.name=M1941 Johnson (Rifle)
 item.mares_leg.name=Mare's Leg
-item.ntw_20.name=NTW-20
 item.hs12.name=HS-12
 item.kriss_vector.name=Kriss Vector
 item.g43_gewehr.name=G43 Gewehr
@@ -242,7 +241,7 @@ item.ump45.name=HK UMP-45
 item.m200_intervention.name=M200 Intervention
 item.sig_mpx.name=SIG MPX
 item.scorpion_evo3_a1.name=Scorpion EVO3 A1
-item.apc9.name=APC9
+item.apc9.name=B&T APC9
 item.arx160.name=ARX-160
 item.g2_contender.name=G2 Contender
 item.beowulf_50_cal.name=Beowulf .50 Cal
@@ -255,14 +254,14 @@ item.ump_45.name=UMP45
 item.s7_10_tricun.name=S7-10 Tricun
 item.famas_f1.name=Famas F1
 item.m1_carbine.name=M1 Carbine
-item.g3.name=G3
+item.g3.name=HK G3
 item.dsr1.name=DSR1
-item.sig_xm7.name=SIG XM7
+item.sig_xm7.name=SIG MCX Spear XM7
 item.ssg_08.name=SSG-08
 item.sig556.name=SIG-556
-item.fmg9.name=FMG-9
+item.fmg9.name=Magpul FMG-9
 item.svd_dragunov.name=SVD Dragunov
-item.type20.name=Type-20
+item.type20.name=Howa Type-20
 item.fiveseven.name=FN Five-Seven
 item.zbroyar_z10.name=Zbroyar-Z10
 item.malyuk.name=Malyuk
