--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1030,14 +1030,14 @@ itemGroup.throwables=Throwables
 itemGroup.blocksAndIngots=Blocks & Ingots
 
 key.categories.weaponlib=Modern Warfare Cubed
-key.custom_invertory=Open Custom Inventory 
+key.custom_inventory=Open Custom Inventory 
 key.texture_change=Change Gun Skin
 key.fire_mode=Selective Fire
 key.reload=Reload Gun
 key.attachment=Attachment Mode
-key.recoil_fitter=Grip Catagory
-key.scope=Scope Catagory
-key.silencer=Barrel Catagory
+key.recoil_fitter=Grip Category
+key.scope=Scope Category
+key.silencer=Barrel Category
 key.laser=Switch Laser
 key.add=Zoom In
 key.subtract=Zoom Out
